--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ body {
     width: 500px;
     background-color: aliceblue;
     display: flex;
+    flex-basis: auto;
     flex-flow: row wrap;
 }
 
 .smallbox {
-    height: 10px;
-    width: 10px;
-    background-color: green;
+    height: 31.25px;
+    width: 31.25px;
 }
