--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ body {
     overflow: auto;
 }
 
+#btn {
+    height: 7vh;
+    width: 5vw;
+    border: 1px solid rgb(36, 36, 36);
+    transform: translateX(-30%);
+    border-radius: 15%;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 
 .box {
     height: 500px;
@@ -28,6 +37,10 @@ body {
     width: 15.625px;
 }
 
-.coloured {
-    background-color: brown;
+.colorbox {
+    height: 6vh;
+    width: 6vh;
+    border: 1px solid black;
+    transform: translateX(80%);
+    border-radius: 50%;
 }
